# unix-final

./: .env  .gitignore  README.md  WebApplication1 - Shortcut.lnk  compose.yaml  deploy-swarm.sh  install.sh
backend/: .gitignore  AppTools.cs  BookManagement.cs  BookMgnt.cs  Cargo.toml  Database.cs  Dockerfile  OrgManagement.cs  Organization.cs  Program.cs  Requests.cs  UserManagement.cs  UserMgnt.cs  appsettings.Development.json  appsettings.json  backend.csproj  backend.http  backend.sln  entrypoint.sh  key_gen.py  run.sh  script.sql
backend/Info/: Author.cs  Book.cs  Genre.cs  Group.cs  IDbModify.cs  User.cs
backend/Migrations/: 20250417202016_InitialCreate.Designer.cs  20250417202016_InitialCreate.cs  20250420003552_Migration1.Designer.cs  20250420003552_Migration1.cs  20250420003934_Migration2.Designer.cs  20250420003934_Migration2.cs  20250420013259_Migration3.Designer.cs  20250420013259_Migration3.cs  20250420013411_Migration4.Designer.cs  20250420013411_Migration4.cs  20250420205001_Migration5.Designer.cs  20250420205001_Migration5.cs  DatabaseModelSnapshot.cs
backend/Properties/: launchSettings.json
backend/src/: auth.rs  book.rs  book_org.rs  exec.rs  io.rs  loc.rs  lock.rs  log.rs  main.rs  msg.rs  net.rs  tool.rs  usr.rs  version.rs
backend/src/io/: book.rs  book_org.rs  db.rs  msg.rs  usr.rs
backend/src/tool/: error.rs  log.rs  version.rs
db/: jwt_token  key_gen.py  password.txt
frontend/: Dockerfile  installTest.sh  package-lock.json  package.json  postcss.config.js  tailwind.config.js
frontend/src/: App.js
frontend/src/css/: login.css  (+1 more)
(+5 files in other folders)
