[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.17.0"
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive"] }
lazy_static = "1.5.0"
postgres = "0.19.10"
rweb = "0.6"
sea-query = { version = "0.32.3", features = ["backend-postgres", "derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.13"
